--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,34 +5,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#f44336"
+    android:background="#e8dbfb"
     tools:ignore="MissingClass">
 
-
-    <Button
-        android:id="@+id/open"
-        android:layout_width="200dp"
-        android:layout_height="70dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/roundbutton"
-        android:text="TAP TO DETECT"
-        android:textColor="@color/white"
-        android:textStyle="bold"></Button>
 
     <com.wonderkiln.camerakit.CameraView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/camera"
-        android:layout_above="@+id/open">
+        >
+
 
     </com.wonderkiln.camerakit.CameraView>
 
+    <Button
+        android:id="@+id/open"
+        android:layout_width="200dp"
+        android:layout_height="74dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+
+        android:layout_marginStart="101dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginEnd="111dp"
+        android:layout_marginBottom="6dp"
+        android:background="@drawable/roundbutton"
+        android:text="TAP TO DETECT"
+        android:textColor="@color/white"
+        android:textStyle="bold" />
 
     <com.example.faceapp.deepHelper.deepGraphicOverlay
         android:id="@+id/graphic_overlay"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/open" />
+        android:layout_height="match_parent" />
+
 
 </RelativeLayout>
