--- a/app/src/main/res/drawable/roundbutton.xml
+++ b/app/src/main/res/drawable/roundbutton.xml
@@ -4,8 +4,8 @@
     <!--fill color-->
     <gradient
         android:type="linear"
-        android:startColor="#ddd6f3"
-        android:endColor="#faaca8"
+        android:startColor="#3a7bd5"
+        android:endColor="#3a6073"
         android:angle="40"/>
     <!--Border width and border color-->
     <stroke android:width="3dp" android:color="@android:color/white"/>
